community packages and MSDB justification optimizer

--- a/examples/Community Modeling/smetana/arabadoptsis_negative_pairs.ipynb
+++ b/examples/Community Modeling/smetana/arabadoptsis_negative_pairs.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7eb8c8b4-41bd-4154-bad8-79c1d5577379",
    "metadata": {
     "scrolled": true,
@@ -571,7 +571,16 @@
      "output_type": "stream",
      "text": [
       "Examining the 66 model pairs\n",
-      "['GCF_001422165.1.RAST.fbamodel', 'GCF_001423965.1.RAST.fbamodel']\r"
+      "['GCF_001422165.1.RAST.fbamodel', 'GCF_001423965.1.RAST.fbamodel'] \t0/66\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -582,6 +591,460 @@
     "other_df, other_mets = MSSmetana.kbase_output(models, mem_media=mem_media)\n",
     "reportHTML = smetana_report(other_df, other_mets)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3622a7fc-625d-4180-a434-fe4d072e529f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model1</th>\n",
+       "      <th>model2</th>\n",
+       "      <th>mro_model1</th>\n",
+       "      <th>mro_model2</th>\n",
+       "      <th>mip</th>\n",
+       "      <th>model1_biomass yield</th>\n",
+       "      <th>model2_biomass yield</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GCF_001422165.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001423965.1.RAST.fbamodel</td>\n",
+       "      <td>0.65000 (26/40)</td>\n",
+       "      <td>0.78788 (26/33)</td>\n",
+       "      <td>11</td>\n",
+       "      <td>101.102383</td>\n",
+       "      <td>87.200144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GCF_001422165.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001424505.1.RAST.fbamodel</td>\n",
+       "      <td>0.60000 (24/40)</td>\n",
+       "      <td>0.72727 (24/33)</td>\n",
+       "      <td>21</td>\n",
+       "      <td>101.102383</td>\n",
+       "      <td>76.233263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GCF_001422165.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001421245.1.RAST.fbamodel</td>\n",
+       "      <td>0.65000 (26/40)</td>\n",
+       "      <td>0.72222 (26/36)</td>\n",
+       "      <td>20</td>\n",
+       "      <td>101.102383</td>\n",
+       "      <td>77.829476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GCF_001422165.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001424455.1.RAST.fbamodel</td>\n",
+       "      <td>0.65000 (26/40)</td>\n",
+       "      <td>0.66667 (26/39)</td>\n",
+       "      <td>23</td>\n",
+       "      <td>101.102383</td>\n",
+       "      <td>98.762741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GCF_001422165.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001422325.1.RAST.fbamodel</td>\n",
+       "      <td>0.65000 (26/40)</td>\n",
+       "      <td>0.76471 (26/34)</td>\n",
+       "      <td>10</td>\n",
+       "      <td>101.102383</td>\n",
+       "      <td>77.001287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>GCF_001424485.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001423885.1.RAST.fbamodel</td>\n",
+       "      <td>0.89474 (34/38)</td>\n",
+       "      <td>0.89474 (34/38)</td>\n",
+       "      <td>17</td>\n",
+       "      <td>98.86155</td>\n",
+       "      <td>84.711639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>GCF_001424485.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001425545.1.RAST.fbamodel</td>\n",
+       "      <td>0.68421 (26/38)</td>\n",
+       "      <td>0.68421 (26/38)</td>\n",
+       "      <td>22</td>\n",
+       "      <td>98.86155</td>\n",
+       "      <td>134.310976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>GCF_001423545.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001423885.1.RAST.fbamodel</td>\n",
+       "      <td>0.87097 (27/31)</td>\n",
+       "      <td>0.71053 (27/38)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>83.217157</td>\n",
+       "      <td>84.711639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>GCF_001423545.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001425545.1.RAST.fbamodel</td>\n",
+       "      <td>0.80645 (25/31)</td>\n",
+       "      <td>0.65789 (25/38)</td>\n",
+       "      <td>22</td>\n",
+       "      <td>83.217157</td>\n",
+       "      <td>134.310976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>GCF_001423885.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001425545.1.RAST.fbamodel</td>\n",
+       "      <td>0.71053 (27/38)</td>\n",
+       "      <td>0.71053 (27/38)</td>\n",
+       "      <td>24</td>\n",
+       "      <td>84.711639</td>\n",
+       "      <td>134.310976</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>66 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           model1                         model2  \\\n",
+       "0   GCF_001422165.1.RAST.fbamodel  GCF_001423965.1.RAST.fbamodel   \n",
+       "1   GCF_001422165.1.RAST.fbamodel  GCF_001424505.1.RAST.fbamodel   \n",
+       "2   GCF_001422165.1.RAST.fbamodel  GCF_001421245.1.RAST.fbamodel   \n",
+       "3   GCF_001422165.1.RAST.fbamodel  GCF_001424455.1.RAST.fbamodel   \n",
+       "4   GCF_001422165.1.RAST.fbamodel  GCF_001422325.1.RAST.fbamodel   \n",
+       "..                            ...                            ...   \n",
+       "61  GCF_001424485.1.RAST.fbamodel  GCF_001423885.1.RAST.fbamodel   \n",
+       "62  GCF_001424485.1.RAST.fbamodel  GCF_001425545.1.RAST.fbamodel   \n",
+       "63  GCF_001423545.1.RAST.fbamodel  GCF_001423885.1.RAST.fbamodel   \n",
+       "64  GCF_001423545.1.RAST.fbamodel  GCF_001425545.1.RAST.fbamodel   \n",
+       "65  GCF_001423885.1.RAST.fbamodel  GCF_001425545.1.RAST.fbamodel   \n",
+       "\n",
+       "         mro_model1       mro_model2 mip model1_biomass yield  \\\n",
+       "0   0.65000 (26/40)  0.78788 (26/33)  11           101.102383   \n",
+       "1   0.60000 (24/40)  0.72727 (24/33)  21           101.102383   \n",
+       "2   0.65000 (26/40)  0.72222 (26/36)  20           101.102383   \n",
+       "3   0.65000 (26/40)  0.66667 (26/39)  23           101.102383   \n",
+       "4   0.65000 (26/40)  0.76471 (26/34)  10           101.102383   \n",
+       "..              ...              ...  ..                  ...   \n",
+       "61  0.89474 (34/38)  0.89474 (34/38)  17             98.86155   \n",
+       "62  0.68421 (26/38)  0.68421 (26/38)  22             98.86155   \n",
+       "63  0.87097 (27/31)  0.71053 (27/38)  15            83.217157   \n",
+       "64  0.80645 (25/31)  0.65789 (25/38)  22            83.217157   \n",
+       "65  0.71053 (27/38)  0.71053 (27/38)  24            84.711639   \n",
+       "\n",
+       "   model2_biomass yield  \n",
+       "0             87.200144  \n",
+       "1             76.233263  \n",
+       "2             77.829476  \n",
+       "3             98.762741  \n",
+       "4             77.001287  \n",
+       "..                  ...  \n",
+       "61            84.711639  \n",
+       "62           134.310976  \n",
+       "63            84.711639  \n",
+       "64           134.310976  \n",
+       "65           134.310976  \n",
+       "\n",
+       "[66 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "striped_df = other_df.drop([\"comm_biomass yield\"], axis=1)\n",
+    "striped_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "14e7e502-76ac-4b35-bddc-ee78d58b5f2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model1</th>\n",
+       "      <th>model2</th>\n",
+       "      <th>mro_model1</th>\n",
+       "      <th>mro_model2</th>\n",
+       "      <th>mip</th>\n",
+       "      <th>model1_biomass yield</th>\n",
+       "      <th>model2_biomass yield</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GCF_001421665.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001421685.1.RAST.fbamodel</td>\n",
+       "      <td>0.78378 (29/37)</td>\n",
+       "      <td>0.74359 (29/39)</td>\n",
+       "      <td>12</td>\n",
+       "      <td>59.621137</td>\n",
+       "      <td>75.316134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GCF_001422685.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001422605.1.RAST.fbamodel</td>\n",
+       "      <td>0.66667 (24/36)</td>\n",
+       "      <td>0.66667 (24/36)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>85.536379</td>\n",
+       "      <td>182.108096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GCF_001424545.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001422685.1.RAST.fbamodel</td>\n",
+       "      <td>0.69444 (25/36)</td>\n",
+       "      <td>0.69444 (25/36)</td>\n",
+       "      <td>12</td>\n",
+       "      <td>63.623543</td>\n",
+       "      <td>85.536379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GCF_001425405.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001422685.1.RAST.fbamodel</td>\n",
+       "      <td>0.70270 (26/37)</td>\n",
+       "      <td>0.72222 (26/36)</td>\n",
+       "      <td>19</td>\n",
+       "      <td>54.149978</td>\n",
+       "      <td>85.536379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GCF_920984695.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001422685.1.RAST.fbamodel</td>\n",
+       "      <td>0.60976 (25/41)</td>\n",
+       "      <td>0.69444 (25/36)</td>\n",
+       "      <td>16</td>\n",
+       "      <td>50.027855</td>\n",
+       "      <td>85.536379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>713</th>\n",
+       "      <td>GCF_001424485.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001423885.1.RAST.fbamodel</td>\n",
+       "      <td>0.89474 (34/38)</td>\n",
+       "      <td>0.89474 (34/38)</td>\n",
+       "      <td>17</td>\n",
+       "      <td>98.86155</td>\n",
+       "      <td>84.711639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>714</th>\n",
+       "      <td>GCF_001424485.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001425545.1.RAST.fbamodel</td>\n",
+       "      <td>0.68421 (26/38)</td>\n",
+       "      <td>0.68421 (26/38)</td>\n",
+       "      <td>22</td>\n",
+       "      <td>98.86155</td>\n",
+       "      <td>134.310976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>715</th>\n",
+       "      <td>GCF_001423545.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001423885.1.RAST.fbamodel</td>\n",
+       "      <td>0.87097 (27/31)</td>\n",
+       "      <td>0.71053 (27/38)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>83.217157</td>\n",
+       "      <td>84.711639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>716</th>\n",
+       "      <td>GCF_001423545.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001425545.1.RAST.fbamodel</td>\n",
+       "      <td>0.80645 (25/31)</td>\n",
+       "      <td>0.65789 (25/38)</td>\n",
+       "      <td>22</td>\n",
+       "      <td>83.217157</td>\n",
+       "      <td>134.310976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>717</th>\n",
+       "      <td>GCF_001423885.1.RAST.fbamodel</td>\n",
+       "      <td>GCF_001425545.1.RAST.fbamodel</td>\n",
+       "      <td>0.71053 (27/38)</td>\n",
+       "      <td>0.71053 (27/38)</td>\n",
+       "      <td>24</td>\n",
+       "      <td>84.711639</td>\n",
+       "      <td>134.310976</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>718 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            model1                         model2  \\\n",
+       "0    GCF_001421665.1.RAST.fbamodel  GCF_001421685.1.RAST.fbamodel   \n",
+       "1    GCF_001422685.1.RAST.fbamodel  GCF_001422605.1.RAST.fbamodel   \n",
+       "2    GCF_001424545.1.RAST.fbamodel  GCF_001422685.1.RAST.fbamodel   \n",
+       "3    GCF_001425405.1.RAST.fbamodel  GCF_001422685.1.RAST.fbamodel   \n",
+       "4    GCF_920984695.1.RAST.fbamodel  GCF_001422685.1.RAST.fbamodel   \n",
+       "..                             ...                            ...   \n",
+       "713  GCF_001424485.1.RAST.fbamodel  GCF_001423885.1.RAST.fbamodel   \n",
+       "714  GCF_001424485.1.RAST.fbamodel  GCF_001425545.1.RAST.fbamodel   \n",
+       "715  GCF_001423545.1.RAST.fbamodel  GCF_001423885.1.RAST.fbamodel   \n",
+       "716  GCF_001423545.1.RAST.fbamodel  GCF_001425545.1.RAST.fbamodel   \n",
+       "717  GCF_001423885.1.RAST.fbamodel  GCF_001425545.1.RAST.fbamodel   \n",
+       "\n",
+       "          mro_model1       mro_model2 mip model1_biomass yield  \\\n",
+       "0    0.78378 (29/37)  0.74359 (29/39)  12            59.621137   \n",
+       "1    0.66667 (24/36)  0.66667 (24/36)  15            85.536379   \n",
+       "2    0.69444 (25/36)  0.69444 (25/36)  12            63.623543   \n",
+       "3    0.70270 (26/37)  0.72222 (26/36)  19            54.149978   \n",
+       "4    0.60976 (25/41)  0.69444 (25/36)  16            50.027855   \n",
+       "..               ...              ...  ..                  ...   \n",
+       "713  0.89474 (34/38)  0.89474 (34/38)  17             98.86155   \n",
+       "714  0.68421 (26/38)  0.68421 (26/38)  22             98.86155   \n",
+       "715  0.87097 (27/31)  0.71053 (27/38)  15            83.217157   \n",
+       "716  0.80645 (25/31)  0.65789 (25/38)  22            83.217157   \n",
+       "717  0.71053 (27/38)  0.71053 (27/38)  24            84.711639   \n",
+       "\n",
+       "    model2_biomass yield  \n",
+       "0              75.316134  \n",
+       "1             182.108096  \n",
+       "2              85.536379  \n",
+       "3              85.536379  \n",
+       "4              85.536379  \n",
+       "..                   ...  \n",
+       "713            84.711639  \n",
+       "714           134.310976  \n",
+       "715            84.711639  \n",
+       "716           134.310976  \n",
+       "717           134.310976  \n",
+       "\n",
+       "[718 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pandas import read_csv, concat\n",
+    "negative_interactions = read_csv(\"SMETANA_report.csv\").drop([\"Unnamed: 0\", \"comm_biomass yield\"], axis=1)\n",
+    "total_interactions = concat([negative_interactions, striped_df], axis=0, ignore_index=True)\n",
+    "total_interactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e7149e82-412c-4e8e-b637-a650913d94de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(other_mets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c1a8a047-c952-4b0e-b6f8-94f33a50234b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import load\n",
+    "\n",
+    "old_mets = list(load(\"SMETANA_report_mets.npy\", allow_pickle=True))+other_mets\n",
+    "reportHTML = smetana_report(total_interactions, old_mets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d42b64ee-7410-449b-9e8d-7093a3324072",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
