SMETANA functional complementarity score and MSDB correction updates

--- a/examples/Community Modeling/MSSteadyCom/build_community_model_clean.ipynb
+++ b/examples/Community Modeling/MSSteadyCom/build_community_model_clean.ipynb
@@ -10,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "00e2fa70-51f3-4d18-93cc-c445d37f25c9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cobrakbase 0.3.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define the environment path \n",
     "from pprint import pprint\n",
@@ -39,6 +31,35 @@
     "models = [model1, model2]\n",
     "com_model = kbase.get_from_ws(\"CMM_iAH991V2_iML1515.kb\",40576)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "48046613-70b0-4deb-aa4a-851474b543d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_token', 'check_response', 'copy', 'download_file_from_kbase', 'download_file_from_kbase2', 'get_from_ws', 'get_object', 'get_object_info', 'get_object_info_from_ref', 'get_objects2', 'hs', 'list_objects', 'max_retry', 'process_workspace_identifiers', 'save', 'save_model', 'save_object', 'ws_client']\n",
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_client', '_service_ver', 'administer', 'alter_workspace_metadata', 'clone_workspace', 'copy_object', 'create_workspace', 'delete_objects', 'delete_workspace', 'get_all_func_info', 'get_all_type_info', 'get_func_info', 'get_jsonschema', 'get_module_info', 'get_names_by_prefix', 'get_object', 'get_object_history', 'get_object_info', 'get_object_info3', 'get_object_info_new', 'get_object_provenance', 'get_object_subset', 'get_objectmeta', 'get_objects', 'get_objects2', 'get_permissions', 'get_permissions_mass', 'get_referenced_objects', 'get_type_info', 'get_workspace_description', 'get_workspace_info', 'get_workspacemeta', 'grant_module_ownership', 'hide_objects', 'list_all_types', 'list_module_versions', 'list_modules', 'list_objects', 'list_referencing_object_counts', 'list_referencing_objects', 'list_workspace_info', 'list_workspace_objects', 'list_workspaces', 'lock_workspace', 'register_typespec', 'register_typespec_copy', 'release_module', 'remove_module_ownership', 'rename_object', 'rename_workspace', 'request_module_ownership', 'revert_object', 'save_object', 'save_objects', 'set_global_permission', 'set_permissions', 'set_workspace_description', 'status', 'translate_from_MD5_types', 'translate_to_MD5_types', 'undelete_objects', 'undelete_workspace', 'unhide_objects', 'ver']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(kbase))\n",
+    "ws = kbase.ws_client\n",
+    "print(dir(ws))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6f6bab9-2c63-4938-9de1-6f0bc50f6b87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
