SMETANA ; MSDB correction ; ExpressionPkg

--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -3780,33 +3780,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "9a1eadf6-9962-4b6e-b2ca-00cc227f89e9",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'GCF_001421425.1.RAST.fbamodel ++ GCF_001421355.1.RAST.fbamodel': 0.3346237599806436}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cobrakbase 0.3.1\n"
+     ]
     }
    ],
    "source": [
     "%run ../../../modelseedpy/community/mssmetana.py\n",
     "\n",
-    "# GCF_001421425 = kbase_api.get_from_ws(\"136582/517/1\")\n",
-    "# GCF_001421355 = kbase_api.get_from_ws(\"136582/407/1\")\n",
-    "# r2a_media = kbase_api.get_from_ws(\"136582/402/1\")\n",
+    "import os\n",
+    "local_cobrakbase_path = os.path.join('C:', 'Users', 'Andrew Freiburger','Documents','Argonne','cobrakbase')\n",
+    "os.environ[\"HOME\"] = local_cobrakbase_path\n",
+    "\n",
+    "# import the KBase\n",
+    "import cobrakbase\n",
+    "# with open(\"/Users/afreiburger/Documents/kbase_token.txt\") as token_file:\n",
+    "with open(\"D:/Users/Andrew Freiburger/Documents/Argonne/kbase_token.txt\") as token_file:\n",
+    "    kbase_api = cobrakbase.KBaseAPI(token_file.readline())\n",
+    "\n",
+    "GCF_001421425 = kbase_api.get_from_ws(\"136582/517/1\")\n",
+    "GCF_001421355 = kbase_api.get_from_ws(\"136582/407/1\")\n",
+    "r2a_media = kbase_api.get_from_ws(\"136582/402/1\")\n",
     "\n",
     "# RAST_genomes = {\"GCF_001421425\": GCF_001421425, \"GCF_001421355\": GCF_001421355}\n",
     "models = [GCF_001421425, GCF_001421355]\n",
-    "MSSmetana.rfc(models, kbase_object=kbase_api)"
+    "# MSSmetana.rfc(models, kbase_object=kbase_api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "54ae5073-7e14-47f9-89d2-4c6e84af34b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['EX_cpd00067_e0', 'EX_cpd00129_e0', 'EX_cpd00009_e0', 'EX_cpd00075_e0', 'EX_cpd00218_e0', 'EX_cpd00122_e0', 'EX_cpd00159_e0', 'EX_cpd00001_e0', 'EX_cpd00033_e0', 'EX_cpd00011_e0', 'EX_cpd00012_e0', 'EX_cpd00024_e0', 'EX_cpd03279_e0', 'EX_cpd00041_e0', 'EX_cpd00246_e0', 'EX_cpd00100_e0', 'EX_cpd00182_e0'] ['EX_cpd10515_e0', 'EX_cpd00794_e0', 'EX_cpd00166_e0', 'EX_cpd00067_e0', 'EX_cpd00161_e0', 'EX_cpd00069_e0', 'EX_cpd00118_e0', 'EX_cpd00311_e0', 'EX_cpd00053_e0', 'EX_cpd00027_e0', 'EX_cpd00654_e0', 'EX_cpd00132_e0', 'EX_cpd00075_e0', 'EX_cpd00107_e0', 'EX_cpd00128_e0', 'EX_cpd00060_e0', 'EX_cpd00054_e0', 'EX_cpd00039_e0', 'EX_cpd00066_e0', 'EX_cpd00276_e0', 'EX_cpd00136_e0', 'EX_cpd00084_e0', 'EX_cpd00024_e0', 'EX_cpd00080_e0', 'EX_cpd00307_e0', 'EX_cpd00051_e0', 'EX_cpd00106_e0', 'EX_cpd00119_e0', 'EX_cpd00268_e0', 'EX_cpd15560_e0']\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "output = MSSmetana.mip(member_models=models, environment=r2a_media, costless=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a9d99bee-fa79-4cc5-b145-36f77b4763d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['EX_cpd00067_e0', 'EX_cpd00075_e0', 'EX_cpd00024_e0'], 3)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "55789ca3-b29e-4fc6-9f17-8eb4c0c875f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'EX_cpd00654_e0'\n",
+      "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mod__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmod__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'capitalize', 'casefold', 'center', 'count', 'encode', 'endswith', 'expandtabs', 'find', 'format', 'format_map', 'index', 'isalnum', 'isalpha', 'isascii', 'isdecimal', 'isdigit', 'isidentifier', 'islower', 'isnumeric', 'isprintable', 'isspace', 'istitle', 'isupper', 'join', 'ljust', 'lower', 'lstrip', 'maketrans', 'partition', 'removeprefix', 'removesuffix', 'replace', 'rfind', 'rindex', 'rjust', 'rpartition', 'rsplit', 'rstrip', 'split', 'splitlines', 'startswith', 'strip', 'swapcase', 'title', 'translate', 'upper', 'zfill']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "print(re.sub(\"(root\\[|\\])\",\"\",output[0][0]))\n",
+    "print(dir(output[0][0]))"
    ]
   },
   {
